[BE] ci : feat/1-config branch에 push되어도 동작하도록 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: deploy
 on:
   push:
-    branches: ['main','dev']
+    branches: ['main','dev', 'feat/1-config']
 jobs:
   CI-CD:
     runs-on: ubuntu-latest
