--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,10 @@
 name: deploy
 on:
   push:
-    branches: ['main','dev', 'feat/1-config']
+    branches:
+      - main
+      - dev
+      - feat/1-config
 jobs:
   CI-CD:
     runs-on: ubuntu-latest
@@ -45,9 +48,21 @@ jobs:
           cp ./backend/driving-today/build/libs/driving-today-0.0.1-SNAPSHOT.jar driving-today-0.0.1-SNAPSHOT.jar
 
       - name: Send jar to main server with SCP
+        if: github.ref == 'refs/heads/main'
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.HOST }}
+          host: ${{ secrets.MAIN_HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.REMOTE_SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "driving-today-0.0.1-SNAPSHOT.jar"
+          target: "/home/ubuntu/"
+
+      - name: Send jar to server with SCP (for dev branch)
+        if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/feat/1-config')
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.TEST_HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.REMOTE_SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
@@ -56,9 +71,22 @@ jobs:
 
       ## deploy to main
       - name: Deploy to main server
+        if: github.ref == 'refs/heads/main'
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST }}
+          host: ${{ secrets.MAIN_HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.REMOTE_SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            cd /home/ubuntu/
+            nohup sh deploy.sh > ~/dev 2>&1 &
+
+      - name: Deploy to test server
+        if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/feat/1-config')
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.TEST_HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.REMOTE_SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
