--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -1,10 +1,10 @@
-name: deploy
+name: deploy_test
 on:
   push:
     branches:
-      - main
       - dev
-      - feat/1-config
+    paths:
+      - 'backend/**'
 jobs:
   CI-CD:
     runs-on: ubuntu-latest
@@ -47,19 +47,7 @@ jobs:
           cd ..
           cp ./backend/driving-today/build/libs/driving-today-0.0.1-SNAPSHOT.jar driving-today-0.0.1-SNAPSHOT.jar
 
-      - name: Send jar to main server with SCP
-        if: github.ref == 'refs/heads/main'
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.MAIN_HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.REMOTE_SSH_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          source: "driving-today-0.0.1-SNAPSHOT.jar"
-          target: "/home/ubuntu/"
-
       - name: Send jar to server with SCP (for dev branch)
-        if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/feat/1-config')
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.TEST_HOST }}
@@ -68,22 +56,8 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           source: "driving-today-0.0.1-SNAPSHOT.jar"
           target: "/home/ubuntu/"
-
-      ## deploy to main
-      - name: Deploy to main server
-        if: github.ref == 'refs/heads/main'
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.MAIN_HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.REMOTE_SSH_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          script: |
-            cd /home/ubuntu/
-            nohup sh deploy.sh > ~/dev 2>&1 &
 
       - name: Deploy to test server
-        if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/feat/1-config')
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.TEST_HOST }}
@@ -92,4 +66,4 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd /home/ubuntu/
-            nohup sh deploy.sh > ~/dev 2>&1 &
+            nohup sh deploy.sh
