--- a/.github/workflows/deploy_main.yml
+++ b/.github/workflows/deploy_main.yml
@@ -48,7 +48,7 @@ jobs:
           cp ./backend/driving-today/build/libs/driving-today-0.0.1-SNAPSHOT.jar driving-today-0.0.1-SNAPSHOT.jar
 
       - name: Send jar to main server with SCP
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@master@v0.1.3
         with:
           host: ${{ secrets.MAIN_HOST }}
           username: ${{ secrets.USERNAME }}
