--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -48,7 +48,7 @@ jobs:
           cp ./backend/driving-today/build/libs/driving-today-0.0.1-SNAPSHOT.jar driving-today-0.0.1-SNAPSHOT.jar
 
       - name: Send jar to server with SCP (for dev branch)
-        uses: appleboy/scp-action@master@v0.1.3
+        uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.TEST_HOST }}
           username: ${{ secrets.USERNAME }}
