--- a/backend/driving-today/build.gradle
+++ b/backend/driving-today/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version:'0.9.1'
+	implementation 'javax.xml.bind:jaxb-api:2.3.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'com.mysql:mysql-connector-j'
