--- a/backend/driving-today/build.gradle
+++ b/backend/driving-today/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version:'0.9.1'
 	implementation 'javax.xml.bind:jaxb-api:2.3.0'
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
