--- a/backend/driving-today/build.gradle
+++ b/backend/driving-today/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	// https://mvnrepository.com/artifact/com.google.code.gson/gson
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+
 
 	implementation 'org.redisson:redisson-spring-boot-starter:3.18.0'
 }
